# llama-cpp-server-python

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: CI.yml
src/llama_cpp_server_python/: __init__.py  _binary.py  _model.py  _server.py
tests/: test_binary.py  test_model.py  test_server.py
