[project]
name = "llama-cpp-server-python"
version = "0.1.0"
description = "Bootstrap a server from llama-cpp in a few lines of python."
authors = [
    {name = "Nick Crews", email = "nicholas.b.crews@gmail.com"},
]
dependencies = []
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "pytest",
    "ruff",
]


[tool.pdm]
distribution = true
